# gem

./: Cargo.toml  LICENSE  README.md  deny.toml
components/gem-package/: Cargo.toml
components/gem-package/src/: builder.rs  error.rs  info.rs  lib.rs
sample_pkg/musl/: build.sh  package.toml
src/: error.rs  main.rs
src/modules/: mod.rs
src/package/: compiler.rs  definition.rs  info.rs  mod.rs  sign.rs
