[package]
name = "gem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general useful
async-trait = "0.1"

# used for argument parsing
clap = "3.1"

# used for package.json
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
version-compare = "0.1.0"

# used for package compilation
zstd = "0.10"
tar = "0.4"

# used for cryptographic signing and verification to make sure the package is not tampered with.
ring = "0.16"

# Used to download from the internet.
git2 = "0.13"
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime"] }
tokio = { version = "^1.17.0", features = ["rt-multi-thread", "macros"] }
