[package]
name = "gem-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.10"
tar = "0.4"
bincode = "1.0"
glob = "0.3.0"

toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
version-compare = "0.1.0"
